# nimapp-call-rustlib

./: .gitignore  README.md  docker-compose.yaml
docker/app/: Dockerfile
src/nimapp/: nimapp.nimble
src/nimapp/src/: nimapp.nim  rustlib.nim
src/nimapp/testresults/: pattern.json
src/rustlib/: Cargo.toml
src/rustlib/src/: lib.rs
src/rustlib/src/submods/: c_ffi.rs  crypto.rs  fib.rs  person.rs  updatable_person.rs
